; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_mem.c_get_heap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_mem.c_get_heap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_block = type { i32 }
%struct.TYPE_3__ = type { %struct.mem_block*, %struct.mem_block* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mem_block** (%struct.TYPE_3__*, i32)* @get_heap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mem_block** @get_heap(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.mem_block**, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 128, label %7
    i32 129, label %10
  ]

7:                                                ; preds = %2
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  store %struct.mem_block** %9, %struct.mem_block*** %3, align 8
  br label %14

10:                                               ; preds = %2
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store %struct.mem_block** %12, %struct.mem_block*** %3, align 8
  br label %14

13:                                               ; preds = %2
  store %struct.mem_block** null, %struct.mem_block*** %3, align 8
  br label %14

14:                                               ; preds = %13, %10, %7
  %15 = load %struct.mem_block**, %struct.mem_block*** %3, align 8
  ret %struct.mem_block** %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
